--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node ./bin/index.js",
+    "start": "node ./dist/index.js",
     "dev": "ts-node ./src/index.ts"
   },
   "dependencies": {
