--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,6 @@
 {
     "type": "sqlite",
-    "database": "dist/db/devbootcamp",
+    "database": "dist/db/test.sqlite",
     "entities": ["src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
     "subscribers": ["src/subscriber/**/*.ts"],
