--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "dev": "ts-node ./src/index.ts"
   },
   "dependencies": {
+    "@types/express-jwt": "^6.0.1",
     "@types/node": "^14.14.31",
     "apollo-server-express": "^2.21.0",
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "graphql": "^15.5.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
