--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev": "ts-node ./src/index.ts"
   },
   "dependencies": {
+    "@apollo/federation": "^0.21.2",
+    "@apollo/gateway": "^0.23.0",
     "@types/express-jwt": "^6.0.1",
     "@types/node": "^14.14.31",
     "apollo-server-express": "^2.21.0",
@@ -29,6 +31,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "concurrently": "^6.0.0",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -38,6 +41,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "wait-on": "^5.2.1"
   }
 }
