--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "type-graphql": "^1.1.1",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
