--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-jwt": "^6.0.0",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "type-graphql": "^1.1.1",
